Updating wordpreess, fixing team modal member name style on small screen, adding some options to header video to test playback in ios

--- a/web/app/themes/r2/assets/styles/pages/_team.scss
+++ b/web/app/themes/r2/assets/styles/pages/_team.scss
@@ -146,11 +146,19 @@
     @include h4;
     top: 4px;
     margin: 0;
-    right: 16px;
+    z-index: 1;
+    right: 2px;
     position: absolute;
-    color: color('black');
+    color: color('white');
+    mix-blend-mode: exclusion;
     transform: rotate(90deg) translateX(100%);
     transform-origin: top right;
+
+    @include media-md {
+      right: 16px;
+      color: color('black');
+      mix-blend-mode: initial;
+    }
   }
 
   .modal-content {
